--- a/detoxify-next/package.json
+++ b/detoxify-next/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
+    "@mdi/react": "^1.5.0",
     "axios": "^0.25.0",
     "js-cookie": "^3.0.1",
     "next": "12.0.7",
